# Deep_Learning_with_Libtorch

./: .gitignore  CMakeLists.txt  README.md
src/01_Introducing/pytorch_basics/: Autograd.cpp  Autograd2.cpp  Autograd_mechanics.cpp  CMakeLists.txt  Dynamic_computation_graphs.cpp  autograd3.cpp  pytorch_basics.cpp
src/01_Introducing/pytorch_overview/: 1_pytorch_overview.cpp  2_structure_data_example.cpp  3_image_data_example.cpp  CMakeLists.txt  pytorch_overview.cpp
src/02_TensorOps/: CMakeLists.txt  Tensor.cpp  TensorOps.cpp  Tensor_math_ops.cpp  Tensor_structure_ops.cpp  pytorch_tensor.cpp  pytorch_tensor_2.cpp
src/03_Linear_regression/: CMakeLists.txt  LR_fashion.cpp  LR_reg_BostonHousing.cpp  Linear_reg_exp2.cpp  Linear_regression.cpp  Low_level_api_linear_reg.cpp  Regression_and_gradient.cpp  csvloader.h
src/04_Logistic_regression/: CMakeLists.txt  Logistic_reg_mnist.cpp  Low_level_api_dnn_binary_classifier.cpp  Softmax_regression.cpp
src/05_BasicModels/: BaseModule.h  CMakeLists.txt  CNN.cpp  LSTM.cpp  LSTM.h  MLP.cpp  MLP.h  NN_functional_and_nn_Module.cpp  convert.py  main.cpp
src/06_Optimization/: CMakeLists.txt  ProximalPolicyOptimization.h  TestPPO.cpp  TrainPPO.cpp
src/06_Optimization_and_loss_function/: CMakeLists.txt  Loss_function.cpp  TestEnvironment.h  TestPPO.cpp  TrainPPO.cpp  simple_optimization_example.cpp
src/07_Dataset_and_dataloader/: CMakeLists.txt  Load_img.cpp  cifar10_demo.cpp  custom-dataset.cpp  dataset_example.cpp  fashion.cpp  fashion.h  fashion_demo.cpp  mnist.cpp  mnist.h  mnist_demo.cpp
src/08_Custom_Dataset/: CMakeLists.txt  CustomDataset.cpp  LoadByInfoFile.cpp  LoadFromFolder.cpp  LoadInSplitFolder.cpp  LoadWithSplitRatio.cpp  dataSet.cpp  dataSet.h
src/09_feedforward_neural_network/: CMakeLists.txt  main.cpp
src/10_Neural_Network/: CMakeLists.txt  DefineModel.cpp  FC_fashion_mnist.cpp  Fashion_template_demo.cpp  feedForword.cpp  function_approx.cpp  nnet.cpp  pytorch_custom_backward.cpp
src/11_Convolutional_Neural_Network/: CMakeLists.txt  Conv_mnist.cpp
src/11_Convolutional_Neural_Network/cifar10_clf/: cifar10_classifier.cpp
src/11_Convolutional_Neural_Network/convnet_mnist/: main.cpp
src/12_classcal_CNN_models/: CMakeLists.txt  dataSet.cpp  dataSet.h  modelsimpl.h
src/12_classcal_CNN_models/AlexNet/custom/: alexnet.cpp  alexnet.h  alexnet_demo.cpp
src/12_classcal_CNN_models/AlexNet/torchvision/: alexnet.cpp  alexnet.h  main.cpp
src/12_classcal_CNN_models/DPN/DPN_32/: dpn.cpp  dpn.h  main.cpp
src/12_classcal_CNN_models/DenseNet/torchvision/: densenet.cpp  densenet.h  main.cpp
src/13_Transfer_learning/: CMakeLists.txt
src/13_Transfer_learning/Image_classification_pretrained/: main.cpp  save_jit.py  save_jit_quantized.py
src/13_Transfer_learning/Mask_face_detection/: RMFD.cpp  RMFD.hpp  classify.cpp  save_jit.py  train.cpp  utils.cpp  utils.hpp
src/13_Transfer_learning/Transfer_learning/: classify.cpp  main.cpp  main.h
src/14_NeuralStyleTransfer/: CMakeLists.txt  create_vgg19_layers_scriptmodule.py
src/14_NeuralStyleTransfer/style_transfer/: main.cpp
src/15_GenerativeAdversarialNetwork/: CMakeLists.txt
src/15_GenerativeAdversarialNetwork/DCGAN/: dcgan.cpp
src/15_GenerativeAdversarialNetwork/GAN/: main.cpp
src/15_GenerativeAdversarialNetwork/WAE2d_GAN/: WAE2d_GAN_demo.cpp  networks.cpp  networks.hpp  sample.cpp  synth.cpp
src/16_Autoencoder/: CMakeLists.txt
src/16_Autoencoder/AE2d/: AE2d_demo.cpp  networks.cpp  networks.hpp
src/16_Autoencoder/DAE2d/: DAE2d_demo.cpp  networks.cpp  networks.hpp
src/16_Autoencoder/VAE/: main.cpp
src/18_RecurrentNeuralNetwork/: CMakeLists.txt
src/18_RecurrentNeuralNetwork/RNN/: main.cpp
src/18_RecurrentNeuralNetwork/RNN_LM/: main.cpp  sample.txt
src/18_RecurrentNeuralNetwork/bi_RNN/: main.cpp
src/19_ObjectDetection/: 19_YOLOV5_video  CMakeLists.txt
src/19_ObjectDetection/OpenCV_DNN/: DetectBaseTrack_Demo.cpp  dnn_ssd_demo.cpp
src/19_ObjectDetection/YOLOv3/: Darknet.cpp  Darknet.h  main.cpp
src/19_ObjectDetection/YOLOv3_DNN/: dnn_yolov3.cpp
src/19_ObjectDetection/YOLOv4_2/: yolo4.cpp
src/19_ObjectDetection/YOLOv5/: yolo.cpp  yolo_video.cpp
src/19_ObjectDetection/Yolo_libtorch/: Parameter.cpp  Parameter.h  Yolo.cpp  main.cpp
src/20_Img-to-Img_Translation/: CMakeLists.txt
src/20_Img-to-Img_Translation/U-Net_Regression/: U-Net_Regression_demo.cpp  loss.cpp  networks.cpp  networks.hpp
src/20_Img-to-Img_Translation/pix2pix/: README.md  loss.cpp  networks.cpp  networks.hpp  pix2pix_demo.cpp
src/21_Semantic_Segmentation/: CMakeLists.txt
src/21_Semantic_Segmentation/src/: Segmentor.h  main.cpp
src/22_Reinforcement_Learning/: CMakeLists.txt
src/22_Reinforcement_Learning/src/: Trainer.cpp  Trainer.h  main.cpp
src/23_Vehicle_and_traffic_lane_detection/: CMakeLists.txt  LaneDetector.cpp  LaneDetector.hpp  Lane_detection_demo.cpp  Vehicle_and_traffic_lane_detection.cpp  yolo5.cpp  yolo5.h
src/23_Vehicle_and_traffic_lane_detection/AdvanceLaneDetection/: calibrator.cpp  calibrator.h  main.cpp  utils.h
src/24_Natural_Language_Processing/: CMakeLists.txt
src/24_Natural_Language_Processing/Text_classification/: d2l_torch.py  nlp_predicator.cpp  sentiment-analysis-rnn.ipynb
src/25_Diffusion/: 25_Diffusion_test  25_Diffusion_train  CMakeLists.txt  README.md  test_demo.cpp  train_demo.cpp
src/25_Diffusion/src/: trainer.cpp  trainer.h
src/26_Yolov3_deepsort/: CMakeLists.txt  config.h
src/26_Yolov3_deepsort/detection/: CMakeLists.txt
src/26_Yolov3_deepsort/processing/: 26_Yolov3_deepsort_processing  CMakeLists.txt  TargetStorage.cpp  TargetStorage.h  main.cpp
src/26_Yolov3_deepsort/tracking/: CMakeLists.txt  tracking_export.h
src/image_tools/: CMakeLists.txt  dataloader.cpp  dataloader.hpp  datasets.cpp  datasets.hpp  losses.hpp  transforms.cpp  transforms.hpp
src/image_tools/Discriminator/: loss.cpp  loss.hpp  main.cpp  networks.cpp  networks.hpp  options.hpp  test.cpp  train.cpp  valid.cpp
src/image_tools/check_tools/: Check_matplotplusplus.cpp  check_img_tool.cpp  img_loder_demo.cpp  loadDisplaySave.cpp
(+119 files in other folders)
